Thesis/force-app/main/default/objects/MedicalExamination__c/MedicalExamination__c.object-meta.xml
<CustomObject>
    <label>Medical examination</label>
    <nameField>
        <label>Medical examination name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical examinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>