Thesis/force-app/main/default/objects/MedicalExamination__c/fields/ExaminationDate__c.field-meta.xml
<CustomField>
    <fullName>ExaminationDate__c</fullName>
    <label>Examination date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>