Thesis/force-app/main/default/objects/MedicalExamination__c/fields/MedicalCost__c.field-meta.xml
<CustomField>
    <fullName>MedicalCost__c</fullName>
    <label>Medical cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>