Thesis/force-app/main/default/objects/MedicalExamination__c/fields/NextExaminationDate__c.field-meta.xml
<CustomField>
    <fullName>NextExaminationDate__c</fullName>
    <label>Next examination date</label>
    <type>Date</type>
</CustomField>