Thesis/force-app/main/default/objects/MedicalExamination__c/fields/VaccineType__c.field-meta.xml
<CustomField>
    <fullName>VaccineType__c</fullName>
    <label>Vaccine type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subunit Vaccine</fullName>
            </value>
            <value>
                <fullName>Antigen Generated by Gene Cloning</fullName>
            </value>
            <value>
                <fullName>DNA Plasmid Vaccine</fullName>
            </value>
            <value>
                <fullName>Alphavirus Replicon</fullName>
            </value>
            <value>
                <fullName>Attenuated Vaccine</fullName>
            </value>
            <value>
                <fullName>Gene-deleted Vaccine</fullName>
            </value>
            <value>
                <fullName>Virus-vectored Vaccine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>