Thesis/force-app/main/default/objects/MedicalExamination__c/recordTypes/ScheduledExamination.recordType-meta.xml
<RecordType>
    <fullName>ScheduledExamination</fullName>
    <active>true</active>
    <label>Scheduled examination</label>
</RecordType>