Thesis/force-app/main/default/objects/MedicalExamination__c/validationRules/MedicalExmainationDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MedicalExmainationDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NextExaminationDate__c &lt;  ExaminationDate__c</errorConditionFormula>
    <errorDisplayField>NextExaminationDate__c</errorDisplayField>
    <errorMessage>The next medical examination date cannot be earlier than the first</errorMessage>
</ValidationRule>