Thesis/force-app/main/default/objects/MedicalExamination__c/listViews/ExaminationListView.listView-meta.xml
<ListView>
    <fullName>ExaminationListView</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>ExaminationDate__c</columns>
    <columns>MedicalCost__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MedicalExamination__c.ScheduledExamination</value>
    </filters>
    <label>Examination</label>
</ListView>