Thesis/force-app/main/default/objects/MedicalExamination__c/listViews/VaccineListView.listView-meta.xml
<ListView>
    <fullName>VaccineListView</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>ExaminationDate__c</columns>
    <columns>MedicalCost__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MedicalExamination__c.Vaccination</value>
    </filters>
    <label>Vaccine</label>
</ListView>